스페이스를 누르면 총알이 발사 플레이어가 회전했을 경우는 아직

--- a/LabProject/LabProject.vcxproj
+++ b/LabProject/LabProject.vcxproj
@@ -167,6 +167,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BulletObject.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="CollisionScene.cpp" />
     <ClCompile Include="ExplosionScene.cpp" />
@@ -193,6 +194,7 @@
     <ClCompile Include="WallsObject.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BulletObject.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="CollisionScene.h" />
     <ClInclude Include="RailObject.h" />
