따라하기07 완료

--- a/따라하기/LabProject00/LabProject05/LabProject05.vcxproj.filters
+++ b/따라하기/LabProject00/LabProject05/LabProject05.vcxproj.filters
@@ -27,13 +27,13 @@
     <ClInclude Include="LabProject05.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="GameFramework.h">
-      <Filter>소스 파일</Filter>
-    </ClInclude>
     <ClInclude Include="Timer.h">
       <Filter>소스 파일</Filter>
     </ClInclude>
     <ClInclude Include="Scene.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="GameFramework.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
